contribute/example/kubernetes/shanno.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shanno
  labels:
    app: shanno
  namespace: development
spec:
  selector:
    app: shanno
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shanno
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
  namespace: development
spec:
  rules:
  - host: shanno.m.test.local
    http:
      paths:
      - path: /
        backend:
          serviceName: shanno
          servicePort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shanno
  labels:
    app: shanno
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shanno
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: shanno
        app-version: "1.0"
    spec:
      volumes:
        - name: static-data
          emptyDir: {}
        - name: shanno-nginx-conf
          configMap:
            name: shanno-nginx-conf
            items:
              - key: default.conf
                path: default.conf
      containers:
        - name: web
          image: shanno
          lifecycle:
            postStart:
              exec:
                command:
                  - "cp"
                  - "-r"
                  - "/opt/shanno/staticfiles/."
                  - "/data"
          volumeMounts:
            - name: static-data
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          imagePullPolicy: Always
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-data
              mountPath: /var/www/html
            - name: shanno-nginx-conf
              mountPath: /etc/nginx/conf.d/
              readOnly: true
      terminationGracePeriodSeconds: 30
